--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,7 +34,6 @@ if(keystorePropertiesFile.exists())
 
 android {
     compileSdkVersion 30
-
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
@@ -44,10 +43,10 @@ android {
         applicationId "com.example.bazimat_vendor_app"
         minSdkVersion 19
         targetSdkVersion 30
+        multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
-
     signingConfigs {
        release {
            keyAlias keystoreProperties['keyAlias']
@@ -57,12 +56,8 @@ android {
        }
    }
 
-
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            //signingConfig signingConfigs.debug
             signingConfig signingConfigs.release
         }
     }
@@ -74,4 +69,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
