--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   shared_preferences: ^2.0.0
   flutter_otp_text_field: ^1.0.0
   flutter_html: 1.3.0
-  pull_to_refresh: ^2.0.0
+  #pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
