--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   shared_preferences: ^2.0.0
   flutter_otp_text_field: ^1.0.0
   flutter_html: 1.3.0
+  #flutter_local_notifications: ^5.0.0
+  #firebase_messaging: ^11.2.5
   #pull_to_refresh: ^2.0.0
 
 dev_dependencies:
