--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,9 @@ dependencies:
   shared_preferences: ^2.0.0
   flutter_otp_text_field: ^1.0.0
   flutter_html: 1.3.0
-  #flutter_local_notifications: ^5.0.0
-  #firebase_messaging: ^11.2.5
+  firebase_messaging: 10.0.8
+  flutter_local_notifications: ^5.0.0
+  path_provider: ^2.0.0
   #pull_to_refresh: ^2.0.0
 
 dev_dependencies:
