--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,18 @@ dependencies:
   firebase_messaging: 10.0.8
   flutter_local_notifications: ^5.0.0
   path_provider: ^2.0.0
+  flutter_launcher_icons: "^0.9.2"
   #pull_to_refresh: ^2.0.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/merchant_logo.png"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
